src/objects/Training_Plan_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Community_Id__c</fullName>
        <label>Community Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_On__c</fullName>
        <inlineHelpText>Date this assignment was completed</inlineHelpText>
        <label>Completed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Updated__c</fullName>
        <label>Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Training_Plan__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Training Plan</label>
        <referenceTo>Training_Plan__c</referenceTo>
        <relationshipLabel>Training Plan Assignments</relationshipLabel>
        <relationshipName>Training_Plan_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Training_Plan_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Training Plan Assignment</label>
    <nameField>
        <displayFormat>TPAS-{0000000}</displayFormat>
        <label>Training Plan Assignment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Plan Assignments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>